kubernetes/apps/networking/isp/app/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: isp
  namespace: networking
subsets:
- addresses:
  - ip: 192.168.0.1
  ports:
  - name: isp
    port: 80
    protocol: TCP
