kubernetes/apps/networking/isp/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isp
  namespace: networking
spec:
  ports:
  - name: isp
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
