kubernetes/apps/networking/isp/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isp
  namespace: networking
  annotations:
    external-dns.home.arpa/enabled: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "mdi:router-wireless"
    hajimari.io/group: "Network"
spec:
  ingressClassName: external
  rules:
    - host: &host "isp.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: isp
                port:
                  number: 443
